--- a/src/styles/_section.sass
+++ b/src/styles/_section.sass
@@ -34,10 +34,9 @@
   color: $brand-tertiary
 .section-tags
   max-width: 60rem
+  margin-bottom: 0
   .content-tags
     display: flex
     color: white
-  .content-tags-tag
-    margin-bottom: -1rem
   @media (max-width: $breakpoint-md)
-      display: none
+    display: none
